@@ -1,6 +1,10 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - new argument 'unique' for graph_color_ccs based on IVAPP 2013 paper
+
+ - node.nodes() in graph API now works
+
  - option --nowx for setup.py to install without wxPython
 
 
